[package]
name = "v4l-webrtc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["full"] }
v4l = "0.14.0"
webrtc = "0.9.0"
signal = { path = "./signal" }
serde_json = "1.0.111"
